# postgresql-scheduler

./: .bashrc  .dockerignore  .env_template  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile-dev  Dockerfile.alt-idea  Dockerfile.dev  README.md  deploy.sh  docker-compose-prod.yml  docker-compose.build.prod.base.yml  docker-compose.build.prod.final.yml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.dev.sh  entrypoint.sh  package.json  pnpm-lock.yaml  projectplan.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.html
.claude/: settings.json
.claude/agents/: postgres-pro.md
.claude/commands/: commit.md  encourage.md  issue.md  monitor.md  new-branch.md  pr.md  rebase.md  ruff.md
.devcontainer/: devcontainer.json  docker-compose.yml  post-create-command.sh
.devcontainer/devpod/: devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml
.vscode-extensions/postgres-mcp/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
ad_hoc/: backfill_old_time_series_and_card_data.py  search_device_shadows_for_stuff.py  update_gps_lat_lon_from_land_locations.py
cron.d/: alarm_log_delete_duplicates.py  alarm_log_mv_refresh.py  alarm_log_mv_refresh_old_non_surface.py  check_aws_things_w_no_power_unit.py  cron_setup.sh  db_remove_old_connections.py  gateways_mv_refresh.py  synch_aws_iot_shadow_with_aws_rds_postgres_config.py  time_series_mv_refresh.py  update_gps_lat_lon_from_land_locations.py  update_gw_power_unit_id_from_shadow.py  utils.py
cron_d/: __init__.py  alarm_log_delete_duplicates.py  alarm_log_mv_refresh.py  alarm_log_mv_refresh_old_non_surface.py  check_aws_things_w_no_power_unit.py  cron_setup.sh  db_remove_old_connections.py  gateways_mv_refresh.py  synch_aws_iot_shadow_with_aws_rds_postgres_config.py  time_series_aggregate_calcs.py  time_series_mv_refresh.py  timescaledb_restart_background_workers.py  update_gw_power_unit_id_from_shadow.py  update_info_from_shadows.py  utils.py
cron_d/_archive/: alarm_log_mv_refresh_old_non_surface.py  check_aws_things_w_no_power_unit.py  db_remove_old_connections.py  gateways_mv_refresh.py
db/migrations/: 2026-03-08-0426-backfill-pricebook-prices.sql
mcp-postgres-server/: .env.example  Dockerfile  create_mcp_readonly_user.sql  drop_mcp_readonly_user.sql  pyproject.toml
mcp-postgres-server/app/: main.py
project/: __init__.py  alarm_log_delete_duplicates.py  alarm_log_mv_refresh.py  alerts_bulk_processor.py  aws_rds_db_delete_old_data.py  cron_setup.sh  logger_config.py  main_scheduler.py  monitor_disk_space.py  refresh_dev_database.py  scheduler_jobs.py  scheduler_monitor.py  synch_aws_iot_shadow_with_aws_rds_postgres_config.py  time_series_aggregate_calcs.py  time_series_mv_refresh.py  time_series_rt_delete_old_data.py  timescaledb_restart_background_workers.py  update_fx_exchange_rates_daily.py  update_info_from_shadows.py  upload_bom_master_parts_to_db.py  utils.py
project/_archive/: alarm_log_mv_refresh_old_non_surface.py  db_remove_old_connections.py  gateways_mv_refresh.py
real/: real_alarm_log_delete_duplicates.py  real_alerts_bulk_processor.py  real_force_refresh_time_series_mv_continuous_aggs.py  real_monitor_disk_space.py  real_refresh_dev_database.py  real_synch_aws_iot_shadow_with_aws_rds_postgres_config.py  real_time_series_aggregate_calcs.py  real_time_series_mv_refresh.py  real_timescaledb_restart_background_workers.py  real_update_fx_exchange_rates_daily.py  real_update_info_from_shadows.py  real_upload_bom_master_parts_to_db.py
real/ad_hoc_actual_run/: run_backfill_old_time_series_and_card_data.py  run_update_gps_lat_lon_from_land_locations.py
scripts/: create-github-issue.sh  github-issue.sh  lint_apply.sh  lint_check.sh  new-feature-branch.sh  poetry_set_private_pypi_credentials.sh  pytest_run_all.sh
test/: real_synch_aws_iot_shadow_with_aws_rds_postgres_config.py  real_time_series_aggregate_calcs.py  real_time_series_mv_refresh.py  real_timescaledb_restart_background_workers.py  real_update_gw_power_unit_id_from_shadow.py  real_update_info_from_shadows.py  run_all_tests.py  test_alerts_bulk_processor.py  test_all_other_programs.py  test_apn_update.py  test_check_aws_things_no_power_unit.py  test_db_remove_old_connections.py  test_error_email_sms_alerts.py  test_gateways_mv_refresh.py  test_main_programs.py  test_main_scheduler.py  test_monitor_disk_space.py  test_scheduler_jobs.py  test_send_alerts.py  test_synch_aws_iot_shadow_with_aws_rds_postgres_config.py  test_time_series_mv_refresh_batching.py  test_time_series_mv_refresh_optimization.py  test_time_series_update_views.py  test_timescaledb_restart_background_workers.py  test_update_gps_lat_lon_from_land_locations.py  test_update_gw_power_unit_id_from_shadow.py  test_update_info_from_shadows.py  test_upload_bom_master_parts_to_db.py  test_utils.py  utils.py
test/_archive/: test_check_aws_things_no_power_unit.py  (+1 more)
(+13 files in other folders)
